--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>XLor Paste</title>
-    <script type="module" crossorigin src="/assets/index.05b5b0e1.js"></script>
+    <script type="module" crossorigin src="/assets/index.6e3b988d.js"></script>
     <link rel="modulepreload" href="/assets/vendor.23bf71ee.js">
     <link rel="stylesheet" href="/assets/index.f2942a16.css">
   </head>
