--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.15.2/dist/katex.min.css" integrity="sha384-MlJdn/WNKDGXveldHDdyRP1R4CTHr3FeuDNfhsLPYrq2t0UBkUdK2jyTnXPEK1NQ" crossorigin="anonymous">
     <title>XLor Paste</title>
-    <script type="module" crossorigin src="/assets/index.08549b2a.js"></script>
-    <link rel="modulepreload" href="/assets/vendor.0b803fca.js">
-    <link rel="stylesheet" href="/assets/index.5aa798e5.css">
+    <script type="module" crossorigin src="/assets/index.8be54a3c.js"></script>
+    <link rel="modulepreload" href="/assets/vendor.c3e4ecc1.js">
+    <link rel="stylesheet" href="/assets/index.ae11b477.css">
   </head>
   <body>
     <div id="app"></div>
